--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,22 @@
     @apply border-border;
   }
 
+  .scrollbar::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 20px;
+    transition: all 1s linear;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    background: linear-gradient(to bottom, hsla(262.1, 83.3%, 57.8%, 0.5), hsla(293.4, 69.5%, 48.8%, 0.5));
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+    cursor: pointer;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -79,12 +95,12 @@
     -webkit-text-fill-color: transparent;
   }
 
-  .custom-bg-gradient{
+  .custom-bg-gradient {
     background: linear-gradient(to bottom, hsla(262.1, 83.3%, 57.8%, 0.5), hsla(293.4, 69.5%, 48.8%, 0.5));
   }
 
   @media (prefers-color-scheme: dark) {
-    .custom-bg-gradient{
+    .custom-bg-gradient {
       background: linear-gradient(to bottom, hsla(263.4, 70%, 50.4%, 0.5), hsla(293.4, 69.5%, 48.8%, 0.5));
     }
   }
